# daily_report

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: b7c0bdd8b4f5_initial_schema.py
infra/docker/: docker-compose.yml
mock-api/: main.py  rapid_get_user_tweets.py
mock-api/users_id/: rapid_get_user_id.py
scripts/: seed.py  test_db.py
src/dailyreport/core/: config.py
src/dailyreport/core/db/: base.py  session.py
src/dailyreport/core/db/models/: __init__.py  company.py  document.py  enums.py  knowledge.py  meta.py  thesis.py
src/dailyreport/core/llm/: chat.py  chat_stream.py  chunker.py  chunker_10q.py  client.py  doc_reader.py  old_doc_reader.py  test_options.py
src/dailyreport/core/llm/docs/: company_report.txt  sample.txt  sample_10q.md
src/mock-api/: filter.py  rapid_get_user_tweets.py
